--- a/baitap_1_bien_kieu-du-lieu.html
+++ b/baitap_1_bien_kieu-du-lieu.html
@@ -5,14 +5,9 @@
     <title>Bai tap 1: Bien</title>
 </head>
 <body>
-
-Hello
-
 <input type="text" id="name" />
-
-
 <button type="button" onclick="xinChao()">
-    Show Me!
+    Xin chào
 </button>
 
 <script>
